--- a/assets/PAGES/3a_variables/tikz/variable01.tex
+++ b/assets/PAGES/3a_variables/tikz/variable01.tex
@@ -24,18 +24,20 @@ very thick, draw=black!5, top color=black!50,bottom color=black]
 
 \node [gray-b] at (8,15.5) {\begin{tabular}{c} Variable\end{tabular}};
 \draw[-triangle 60]  (8,14.7) -- (8,13.2);
+\draw[-triangle 60]  (9.25,15.5) -- (10.25,15.5);
 
 \node [gray-b] at (11.4,15.5) {\begin{tabular}{c} Object \end{tabular}};
 \draw[-triangle 60]  (11.4,14.7) -- (11.4,13.2);
+\draw[-triangle 60]  (12.6,15.5) -- (13.65,15.5);
 
 \node [gray-b] at (14.75,15.5) {\begin{tabular}{c} Value\end{tabular}};
 \draw[-triangle 60]  (14.75,14.7) -- (14.75,13.2);
 
-\node [square, anchor=center] at (8,12.2) {\begin{tabular}{c} Label \end{tabular}};
+\node [square, anchor=center] at (8,12.35) {\begin{tabular}{c} Label \end{tabular}};
 
-\node [square, anchor=center] at (11.5,12.2) {\begin{tabular}{c} Storage \\ Location\end{tabular}};
+\node [square, anchor=center] at (11.5,12.35) {\begin{tabular}{c} Storage \\ Location\end{tabular}};
 
-\node [square, anchor=center] at (14.85,12.2) {\begin{tabular}{c} Characterized \\ by a Type \end{tabular}};
+\node [square, anchor=center] at (14.85,12.35) {\begin{tabular}{c} Characterized \\ by a Type \end{tabular}};
 %\node[anchor=center,scale=5.2] at (10.25,15.5) {\begin{tabular}{l} $\Rightarrow$ \end{tabular}}; 
 
 
