--- a/assets/PAGES/7d_TS-onFunctions/tikz/dispatch01.tex
+++ b/assets/PAGES/7d_TS-onFunctions/tikz/dispatch01.tex
@@ -47,7 +47,7 @@ very thick, draw=none, top color=myblue, bottom color=myblue, scale=1.25]
  \draw[-triangle 60]  (18.5,17.1) -- (19.7,17.1);
  \draw  (18.5,20) -- (18.5,17.1);
 
-\node [question] at (16.75,18.55) {\begin{tabular}{c} Does The Method \\ Exist? \end{tabular}}; 
+\node [question] at (16.75,18.55) {\begin{tabular}{c} Does The \\ Method Instance \\ Exist? \end{tabular}}; 
 \draw[-triangle 60]  (13.75,18.6) -- (15.1,18.6);
 \node [noborder] at (19.7,20) {\begin{tabular}{l} Execute \end{tabular}};
 \node [noborder] at (19.7,17.1) {\begin{tabular}{l} Compile \end{tabular}};
